--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    cursor: pointer url('/funfiles/Cool\ Text\ -\ Xcillence\ 458892477367626.png'), auto;
+    cursor: pointer url('funfiles/Xcillence.png'), auto;
     font-family: 'Arial', sans-serif;
 }
 
